# spinel

./: Cargo.toml  Makefile  bootstrap.sh  cargo-config.toml
build-templates/android/: settings.gradle
build-templates/android/app/: build.gradle
build-templates/android/app/src/androidTest/java/org/spinel/android/: ExampleInstrumentedTest.java
build-templates/android/app/src/main/: AndroidManifest.xml
build-templates/android/app/src/main/java/org/spinel/android/: MainActivity.java
build-templates/android/app/src/main/java/org/spinel/glue/: SpinelGlue.java
build-templates/android/app/src/main/res/layout/: activity_main.xml
build-templates/android/app/src/main/res/values/: strings.xml
build-templates/android/app/src/test/java/org/spinel/android/: ExampleUnitTest.java
build-templates/android/gradle/wrapper/: gradle-wrapper.properties
platform/android/: Cargo.toml
platform/android/src/: lib.rs
