[package]
name = "spinelandroid"
version = "0.1.0"
authors = ["tamamu <tamamu.1r1s@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.14", default-features = false }
